--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
-MONGODB_URI=
-PORT = 5000
+MONGODB_URI=mongodb+srv://abdulrazzak1835:QjS4UiNgvBt7smrE@cluster0.n9szp.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
+PORT = 5002
+
+
 
  # QjS4UiNgvBt7smrE
