--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
-MONGODB_URI=mongodb+srv://abdulrazzak1835:QjS4UiNgvBt7smrE@cluster0.n9szp.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
-PORT = 5002
+PORT=5002
+MONGODB_URI=mongodb+srv://abdulrazzak1835:CHSoBWX5PQm5Tsdb@cluster0.avtzu.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
 
 
 
- # QjS4UiNgvBt7smrE
+
+
+#CHSoBWX5PQm5Tsdb
